--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     crossorigin="anonymous"></script>
-  <title>Angular App</title>
+  <title>VCA App</title>
 </head>
 
 <body>
